# tier2-jira-ticket-notification

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: settings.py
src/auth/: jumpcloud_auth.py
src/automation/: selenium_helpers.py  web_driver.py
src/jira/: operations.py
src/utils/: file_operations.py
tests/: test_example.py
